<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, ImWellActivity!</string>
    <string name="app_name">imWell</string>
    <string name="un">Username:</string>
    <string name="pwd">Password:</string>
    <string name="login">Login</string>
    <string name="logo">imWell logo</string>
    <string name="configBtnText">config</string>
    <string name="configure_server">Server Url:</string>
    <string name="configure_save_to_file">Save To File?</string>
    <string name="configure_remember_me">Remember Me?</string>
    <string name="configure_save">Save Configurations</string>
    <string name="sensor_hr">71</string>
    <string name="sensor_rr">12</string>
    <string name="sensor_hr_text">heartrate</string>
    <string name="sensor_rr_text">respiratory rate</string>
    <string name="sensor_event_button_text">Event</string>
    <string name="sensor_session_duration_text">00:00:00</string>

</resources>