<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    android:orientation="vertical">   
	<TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/configure_server" />
	<EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtServerUrl"
        android:inputType="text" />
	<CheckBox
		android:id="@+id/checkBox1"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/configure_save_to_file" />
	<CheckBox
	    android:id="@+id/checkBox2"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/configure_remember_me" />
	<Button
	    android:id="@+id/button1"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/configure_save" />

</LinearLayout>